# Distributed under the MIT License.
# See LICENSE.txt for details.

add_subdirectory(all)
add_subdirectory(christoffel_first_kind)
add_subdirectory(christoffel_second_kind)
add_subdirectory(dt_pi)
add_subdirectory(dt_spacetime_metric)
add_subdirectory(gauge_constraint)
add_subdirectory(normal_dot_gauge_constraint)
add_subdirectory(phi_1_up)
add_subdirectory(pi_one_normal)
add_subdirectory(three_index_constraint)
add_subdirectory(trace_christoffel)
